--- a/templates/index.html
+++ b/templates/index.html
@@ -1,70 +1,158 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
-	<title>Test or Train | emAIl — AI Mail Classifier</title>
+    <meta charset="utf-8">
+    <title>Home | eMAIL — AI Mail Classifier</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="../static/bootstrap-custom.css">
 </head>
 <body>
-	<div class="container-fluid">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-sm-3 col-md-2">
                 <div class="btn-group">
-                    <a href="output.html"><button type="button" class="btn btn-primary btn-lg">HOME</button></a>
-                </div> 
+                    <a href="{{ url_for('testntrain') }}">
+                    <button type="button" class="btn btn-primary btn-lg">Train Test n Tune <!-- <span class="caret"></span> -->
+                    </button></a><!-- 
+                    <ul class="dropdown-menu" role="menu">
+                        <li><a href="test.html">Testing</a></li>
+                        <li><a href="train.html">Training and Tuning</a></li>
+                    </ul> -->
+                </div>
             </div>
-            <div class="col-sm-6 col-md-8"><h1 class="brand">eM<span class="ai">AI</span>L</h1></div>
-            <div class="col-sm-3 col-md-2"></div>
+            <div class="col-sm-9 col-md-10">
+                <h1 class="brand">eM<span class="ai">AI</span>L</h1>
+                <div class="pull-right">
+                    <span class="text-muted"><b>1</b>–<b>50</b> of <b>160</b></span>
+                    <div class="btn-group btn-group-sm">
+                        <button type="button" class="btn btn-default">
+                            <span class="glyphicon glyphicon-chevron-left"></span>
+                        </button>
+                        <button type="button" class="btn btn-default">
+                            <span class="glyphicon glyphicon-chevron-right"></span>
+                        </button>
+                    </div>
+                </div>
+            </div>
         </div>
-        <hr style="border-width: 5px;">
+        <hr>
+        <div class="email">
+            <div class="row">
+                <!--left-->
+                <aside class="col-sm-3 col-md-2">
+                    <ul class="nav nav-pills nav-stacked">
+                        <li class="active"><a href="#"><span class="badge pull-right">32</span> Transfers </a></li>
+                        <li><a href="#"><span class="badge pull-right">18</span>Retirements</a></li>
+                        <li><a href="#"><span class="badge pull-right">6</span>MDU</a></li>
+                    </ul>
+                    <hr>
+                </aside>
+                <!--main-->
+                <div class="col-sm-9 col-md-10">
+                    <!-- tabs --><!-- 
+                    <ul class="nav nav-tabs">
+                        <li class="active"><a href="#home" data-toggle="tab"><span class="glyphicon glyphicon-inbox">
+                        </span>Primary</a></li>
+                        <li><a href="#profile" data-toggle="tab"><span class="glyphicon glyphicon-user"></span>
+                            Spam</a></li>
+                        <li><a href="#settings" data-toggle="tab"><span class="glyphicon glyphicon-plus no-margin">
+                        </span></a></li>
+                    </ul> -->
+                    <!-- tab panes -->
+                    <div class="tab-content">
+                        <div class="tab-pane fade in active" id="inbox">
+                            <table class="table table-striped table-hover">
+                                <tbody>
+                                    <!-- inbox header -->
+                                    <tr>
+                                        <td>
+                                            <label>
+                                                <input type="checkbox" class="all" title="select all">
+                                            </label>
+                                        </td>
+                                        <td>
+                                            <button class="btn btn-default pull-right"><i title="delete selected" class="glyphicon glyphicon-trash"></i></button>
+                                            <button class="btn btn-default pull-right"><i title="move to folder" class="glyphicon glyphicon-folder-open"></i></button>
+                                        </td>
+                                        <td>
+                                        </td>
+                                    </tr>
+                                    <!-- inbox item -->
+                                    <tr>
+                                        <td>
+                                            <label>
+                                                <input type="checkbox">
+                                            </label> <span class="name">Mark Otto</span></td>
+                                        <td><span class="subject">Nice work on the docs for lastest version</span> <small class="text-muted">- Joe, I just reviewed the last...</small></td>
+                                        <td><span class="badge">12:10 AM</span> <span class="pull-right glyphicon glyphicon-paperclip"></span></td>
+                                    </tr>
+                                    <!-- inbox item -->
+                                    <tr>
+                                        <td>
+                                            <label>
+                                                <input type="checkbox">
+                                            </label> <span class="name">Anil Judah</span></td>
+                                        <td><span class="subject">GAE Project</span> <small class="text-muted">- Can you take a second to look..</small></td>
+                                        <td><span class="badge badge-inverse">11:33 AM</span> <span class="pull-right glyphicon glyphicon-warning-sign text-danger"></span></td>
+                                    </tr>
+                                    <!-- inbox item -->
+                                    <tr class="unread">
+                                        <td>
+                                            <label>
+                                                <input type="checkbox">
+                                            </label> <span class="name">Terry Lincoln</span></td>
+                                        <td><span class="subject">Vacation pics</span> <small class="text-muted">(this message contains images)</small></td>
+                                        <td><span class="badge">11:13 AM</span> <span class="pull-right"></span></td>
+                                    </tr>
+                                    <!-- inbox item -->
+                                    <tr>
+                                        <td>
+                                            <label>
+                                                <input type="checkbox">
+                                            </label> <span class="name">Mark Brown</span></td>
+                                        <td><span class="subject">Last call for this weekend</span> <small class="text-muted">- Hi Joe, Thanks for sending over those..</small></td>
+                                        <td><span class="badge">11:05 AM</span> <span class="pull-right"></span></td>
+                                    </tr>
+                                    <!-- inbox item -->
+                                    <tr>
+                                        <td>
+                                            <label>
+                                                <input type="checkbox">
+                                            </label> <span class="name">Jorge Anodonolgez</span></td>
+                                        <td><span class="subject">Meeting with Simco</span> <small class="text-muted">- Joe I included your contact info for the...</small></td>
+                                        <td><span class="badge">10:54 AM</span> <span class="pull-right glyphicon glyphicon-paperclip"></span></td>
+                                    </tr>
+                                    <!-- inbox item -->
+                                    <tr>
+                                        <td>
+                                            <label>
+                                                <input type="checkbox">
+                                            </label> <span class="name">Mark Otto</span></td>
+                                        <td><span class="subject">FYI: New Release</span> <small class="text-muted">this message is high priority</small></td>
+                                        <td><span class="badge">9:58 AM</span> <span class="pull-right"></span></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="tab-pane fade in" id="profile">
+                            <div class="list-group">
+                                <div class="list-group-item">
+                                    <span class="text-center">This tab folder is empty.</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row-md-12">
+                        <div class="well text-right">
+                            <small>Last updated: 4/14/2015: 3:02 PM</small>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="bgc">
-	    <div class="container">
-	        <div class="row">
-	            <div class="col-sm-6 col-md-6 test-form">
-	                <h2>Upload Your Testing Data</h2>
-	                <form action="" id="testForm" method="POST" enctype="multipart/form-data">
-						{{ testForm.testData.label }}
-						{{ testForm.testData }}
-						{{ testForm.submit(class="btn btn-success btn-lg") }}
-					</form>
-	                <hr style="border-width: 5px;">
-	                <h3>
-	                	<ul class="details">
-	                		<li>For input of the test data, provide a zipped file containing all the emails to be tested.</li>
-	                		<li>We advise you to use the recommended hyperparameters for highest accuracy.</li>
-	                	</ul>
-	                </h3>
-	            </div>
-	            <div class="col-sm-6 col-md-6 train-form">
-	                <h2>Hyperparameters Tuning</h2>
-	                <form action="" id="trainForm" method="POST" enctype="multipart/form-data">
-	                    {{ trainForm.trainData.label }}
-	                    {{ trainForm.trainData }}<br>
-	                	<div>
-		                	<img class="img" src="../static/img.jpeg" alt="">
-		                </div>
-	                	{{ trainForm.learnRate.label }}<br>
-	                    {{ trainForm.learnRate }}<br>
-	                	{{ trainForm.epochs.label }}<br>
-	                    {{ trainForm.epochs }}<br>
-	                    <!-- <label for="algo" form="trainForm">Algorithm:</label><br>
-	                    <select name="algo" id="algo">
-	                        <option>--select--</option>
-	                        <option value="">ADAM (Recommended)</option>
-	                        <option value="">RMSProp</option>
-	                        <option value="">SGD</option>
-	                    </select><br> -->
-	                	{{ trainForm.arch.label }}<br>
-	                    {{ trainForm.arch }}<br>
-						{{ trainForm.submit(class="btn btn-success btn-lg") }}
-					</form>
-	            </div>
-	        </div>
-	    </div>
-	</div>
 </body>
 </html>
