--- a/templates/results.html
+++ b/templates/results.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Home | eMAIL — AI Mail Classifier</title>
+    <title>{{ category }} | eMAIL — AI Mail Classifier</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -43,9 +43,21 @@
                 <!--left-->
                 <aside class="col-sm-3 col-md-2">
                     <ul class="nav nav-pills nav-stacked">
-                        <li class="active"><a href="#"><span class="badge pull-right">32</span> Transfers </a></li>
-                        <li><a href="#"><span class="badge pull-right">18</span>Retirements</a></li>
-                        <li><a href="#"><span class="badge pull-right">6</span>MDU</a></li>
+                        {{ if category=='transfers' }}
+                            <li class="active"><a href="{{ url_for('results', category='transfers') }}"><span class="badge pull-right">32</span> Transfers </a></li>
+                        {{ else }}
+                            <li><a href="{{ url_for('results', category='transfers') }}"><span class="badge pull-right">32</span> Transfers </a></li>
+                        {{ endif }}
+                        {{ if category=='retirements' }}
+                            <li class="active"><a href="{{ url_for('results', category='retirements') }}"><span class="badge pull-right">18</span>Retirements</a></li>
+                        {{ else }}
+                            <li><a href="{{ url_for('results', category='retirements') }}"><span class="badge pull-right">18</span>Retirements</a></li>
+                        {{ endif }}
+                        {{ if category=='mdu' }}
+                            <li class="active"><a href="{{ url_for('results', category='mdu') }}"><span class="badge pull-right">6</span>MDU</a></li>
+                        {{ else }}
+                            <li><a href="{{ url_for('results', category='mdu') }}"><span class="badge pull-right">6</span>MDU</a></li>
+                        {{ endif }}
                     </ul>
                     <hr>
                 </aside>
