--- a/templates/results.html
+++ b/templates/results.html
@@ -92,7 +92,7 @@
                                         </td>
                                     </tr>
                                     {% for row in reader %}
-                                        {% if row['Label'] == category %}
+                                        {% if row['Label'].lower() == category %}
                                         <tr>
                                             <td>
                                                 <label>
