--- a/static/bootstrap-custom.css
+++ b/static/bootstrap-custom.css
@@ -31,10 +31,10 @@ hr { margin-top: 5px;margin-bottom: 10px; }
 */
 body {
   font-family:Verdana, Geneva, sans-serif;
-  color:#555;
+  color:#000;
   font-weight:200;
   font-size:13px;
-  background-color:#f2f2f2;
+  background-color:#2e3440;
 }
 a, .help-block  {
   color:#262626;
@@ -43,12 +43,12 @@ a:hover {
   color:#333;	
 }
 h1,h2,h3,h4{
-  color:#666;
+  color:#000;
   font-weight:light;
 }
 p.lead {
   font-family:arial, sans-serif;
-  color:#777;
+  color:#000;
   font-size:16px;
   font-weight:700;
 }
@@ -62,12 +62,12 @@ p.lead {
   border-color: #333;
 }
 .navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:hover, .navbar-inverse .navbar-nav>.active>a:focus {
-  color: #eee;
-  background-color: #111;
+  color: #000;
+  background-color: #00d2be;
 }
 .well{
   background: #f8f8f8;
-  color:#777;
+  color:#000;
   border-radius:0;
   box-shadow:0 0 0;
 }
@@ -75,17 +75,17 @@ p.lead {
   border-color: #f0f0f0;
 }
 .table-hover>tbody>tr:hover>td,.table-hover>tbody>tr:hover>th {
-  background-color: #fafafa;
+  background-color: #00d2be;
 }
-.table-striped>tbody>tr:nth-child(odd)>td, .table-striped>tbody>tr:nth-child(odd)>th {
-  background-color: #f7f7f7;
+.table>tbody>tr>td, .table>tbody>tr>th {
+  background-color: #FFF;
 }
 .table>thead>tr>th {
   border-bottom-width: 1px;
 }
 .table>thead>tr td {
   font-weight:800;
-  color:#454545; 
+  color:#000; 
 }    
 .form-control {
   background: #fdfdfd;
@@ -117,9 +117,9 @@ p.lead {
   color:#666;
 }
 a.list-group-item.active, .nav-pills>li.active>a, .nav-pills>li.active>a:hover, .nav-pills>li.active>a:focus {
-  color: #fff;
-  background-color: #5bc0de;
-  border-color: #5bc0de; 
+  color: #000;
+  background-color: #00d2be;
+  border-color: #00d2be; 
 }
 .badge {
   border-radius:2px;
@@ -130,9 +130,9 @@ a.list-group-item.active, .nav-pills>li.active>a, .nav-pills>li.active>a:hover, 
   box-shadow:#bbb 1px 1px 0px;
 } 
 [class*='-primary']:not([class*='text-']){
-  background-color:#008cba;
+  background-color:#00d2be;
   border-width:0;
-  color:#f0f0f0;
+  color:#000;
 }
 [class*='-default']:not([class*='text-']){
   background-color:#f2f2f2;
@@ -259,4 +259,15 @@ button a{
 }
 .details li{
   padding: 5px;
+}
+
+.nav-pills li{
+  background-color: #FFF;
+  color: #000;
+}
+img.logo {
+  width: 25%;
+  margin-bottom: 1vw;
+  position: relative;
+  left: 28%;
 }
