--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
                 </div>
             </div>
             <div class="col-sm-9 col-md-10">
-                <h1 class="brand">eM<span class="ai">AI</span>L</h1>
+                <img class="logo" src="{{ url_for('static', filename='icon.png') }}"
                 <div class="pull-right">
                     <!-- <span class="text-muted"><b>1</b>–<b>50</b> of <b>160</b></span>
                     <div class="btn-group btn-group-sm">
@@ -63,7 +63,7 @@
                     <!-- tab panes -->
                     <div class="tab-content">
                         <div class="tab-pane fade in active" id="inbox">
-                            <table class="table table-striped table-hover">
+                            <table class="table table-hover">
                                 <tbody>
                                     <!-- inbox header -->
                                     <tr>
