--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Home | eMAIL — AI Mail Classifier</title>
+    <title>{{ category }} | eMAIL — AI Mail Classifier</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -14,8 +14,9 @@
             <div class="col-sm-3 col-md-2">
                 <div class="btn-group">
                     <a href="{{ url_for('testntrain') }}">
-                    <button type="button" class="btn btn-primary btn-lg">Train Test n Tune <!-- <span class="caret"></span> -->
-                    </button></a><!-- 
+                        <button type="button" class="btn btn-primary btn-lg">Train Test n Tune<!-- <span class="caret"></span> -->
+                    </button></a>
+                            <!-- 
                     <ul class="dropdown-menu" role="menu">
                         <li><a href="test.html">Testing</a></li>
                         <li><a href="train.html">Training and Tuning</a></li>
@@ -43,9 +44,21 @@
                 <!--left-->
                 <aside class="col-sm-3 col-md-2">
                     <ul class="nav nav-pills nav-stacked">
-                            <li class="active"><a href="#"><span class="badge pull-right">32</span> Transfers </a></li>
-                            <li><a href="#"><span class="badge pull-right">18</span>Retirements</a></li>
-                        <li><a href="#"><span class="badge pull-right">69</span>MDU</a></li>
+                        {% if category=='Transfers' %}
+                            <li class="active"><a href="{{ url_for('home', category='Transfers') }}"> Transfers </a></li>
+                        {% else %}
+                            <li><a href="{{ url_for('home', category='Transfers') }}"> Transfers </a></li>
+                        {% endif %}
+                        {% if category=='Retirements' %}
+                            <li class="active"><a href="{{ url_for('home', category='Retirements') }}"> Retirements </a></li>
+                        {% else %}
+                            <li><a href="{{ url_for('home', category='Retirements') }}"> Retirements </a></li>
+                        {% endif %}
+                        {% if category=='MDU' %}
+                            <li class="active"><a href="{{ url_for('home', category='MDU') }}"> MDU </a></li>
+                        {% else %}
+                            <li><a href="{{ url_for('home', category='MDU') }}"> MDU </a></li>
+                        {% endif %}
                     </ul>
                     <hr>
                 </aside>
@@ -61,64 +74,33 @@
                         </span></a></li>
                     </ul> -->
                     <!-- tab panes -->
+                    {% with messages = get_flashed_messages(with_categories=true) %}
+                        {% if messages %}
+                            {% for type, message in messages %}
+                                <div class="alert alert-{{ type }}">
+                                {{ message }}
+                                </div>
+                            {% endfor %}
+                        {% endif %}
+                    {% endwith %}
                     <div class="tab-content">
                         <div class="tab-pane fade in active" id="inbox">
                             <table class="table table-striped table-hover">
                                 <tbody>
                                     <!-- inbox header -->
-                                    <tr class="unread">
-                                        <td>
-                                            <label>
-                                                <input type="checkbox">
-                                            </label> <span class="name">Mark Otto</span></td>
-                                        <td><span class="subject">Nice work on the docs for lastest version</span> <small class="text-muted">- Joe, I just reviewed the last...</small></td>
-                                        <td><span class="badge">12:10 AM</span> <span class="pull-right glyphicon glyphicon-paperclip"></span></td>
-                                    </tr>
-                                    <!-- inbox item -->
-                                    <tr class="unread">
-                                        <td>
-                                            <label>
-                                                <input type="checkbox">
-                                            </label> <span class="name">Anil Judah</span></td>
-                                        <td><span class="subject">GAE Project</span> <small class="text-muted">- Can you take a second to look..</small></td>
-                                        <td><span class="badge badge-inverse">11:33 AM</span> <span class="pull-right glyphicon glyphicon-warning-sign text-danger"></span></td>
-                                    </tr>
-                                    <!-- inbox item -->
-                                    <tr class="unread">
-                                        <td>
-                                            <label>
-                                                <input type="checkbox">
-                                            </label> <span class="name">Terry Lincoln</span></td>
-                                        <td><span class="subject">Vacation pics</span> <small class="text-muted">(this message contains images)</small></td>
-                                        <td><span class="badge">11:13 AM</span> <span class="pull-right"></span></td>
-                                    </tr>
-                                    <!-- inbox item -->
-                                    <tr class="unread">
-                                        <td>
-                                            <label>
-                                                <input type="checkbox">
-                                            </label> <span class="name">Mark Brown</span></td>
-                                        <td><span class="subject">Last call for this weekend</span> <small class="text-muted">- Hi Joe, Thanks for sending over those..</small></td>
-                                        <td><span class="badge">11:05 AM</span> <span class="pull-right"></span></td>
-                                    </tr>
-                                    <!-- inbox item -->
-                                    <tr class="unread">
-                                        <td>
-                                            <label>
-                                                <input type="checkbox">
-                                            </label> <span class="name">Jorge Anodonolgez</span></td>
-                                        <td><span class="subject">Meeting with Simco</span> <small class="text-muted">- Joe I included your contact info for the...</small></td>
-                                        <td><span class="badge">10:54 AM</span> <span class="pull-right glyphicon glyphicon-paperclip"></span></td>
-                                    </tr>
-                                    <!-- inbox item -->
-                                    <tr class="unread">
-                                        <td>
-                                            <label>
-                                                <input type="checkbox">
-                                            </label> <span class="name">Mark Otto</span></td>
-                                        <td><span class="subject">FYI: New Release</span> <small class="text-muted">this message is high priority</small></td>
-                                        <td><span class="badge">9:58 AM</span> <span class="pull-right"></span></td>
-                                    </tr>
+                                    {% for row in reader %}
+                                        {% if row['Label'] == category %}
+                                        <tr class="unread">
+                                            <td>
+                                                <label>
+                                                    <input type="checkbox">
+                                                </label> <span class="name">{{ row['Sender'] }}</span>
+                                            </td>
+                                            <td><span class="subject">{{ row['Subject'] }}</span> <small class="text-muted">- {{ row['Body'][:20] }}...</small></td>
+                                            <td><span class="badge">{{ row['Date'] }}</span></td>
+                                        </tr>
+                                        {% endif %}
+                                    {% endfor %}
                                 </tbody>
                             </table>
                         </div>
