Fixed Test & Train Logic

--- a/templates/testntrain.html
+++ b/templates/testntrain.html
@@ -42,7 +42,7 @@
 						{{ testForm.testData }}
 						{{ testForm.arch.label }}<br>
 						{{ testForm.arch }}<br>
-						{{ testForm.submit(class="btn btn-success btn-lg") }}
+						{{ testForm.testSubmit(class="btn btn-success btn-lg") }}
 					</form>
 	                <hr style="border-width: 5px;">
 	                <h3>
@@ -73,7 +73,7 @@
 	                    </select><br> -->
 	                	{{ trainForm.arch.label }}<br>
 	                    {{ trainForm.arch }}<br>
-						{{ trainForm.submit(class="btn btn-success btn-lg") }}
+						{{ trainForm.trainSubmit(class="btn btn-success btn-lg") }}
 					</form>
 	            </div>
 	        </div>
