--- a/templates/email.html
+++ b/templates/email.html
@@ -77,7 +77,7 @@
                         </span></a></li>
                     </ul> -->
                     <!-- tab panes -->
-                    {% with messages = get_flashed_messages(with_categories=true) %}
+                    <!-- {% with messages = get_flashed_messages(with_categories=true) %}
                         {% if messages %}
                             {% for type, message in messages %}
                                 <div class="alert alert-{{ type }}">
@@ -85,29 +85,17 @@
                                 </div>
                             {% endfor %}
                         {% endif %}
-                    {% endwith %}
+                    {% endwith %} -->
                     <div class="tab-content">
                         <div class="tab-pane fade in active" id="inbox">
-                            <table class="table table-striped table-hover">
-                                <tbody>
-                                    <!-- inbox header -->
-                                    {% for row in reader %}
-                                        {% if row['Label'] == category %}
-                                        <tr class="unread">
-                                            <a href="{{ url_for('email', Filename=row['Filename']) }}">
-                                                <td>
-                                                    <label>
-                                                        <input type="checkbox">
-                                                    </label> <span class="name">{{ row['Sender'] }}</span>
-                                                </td>
-                                                <td><span class="subject">{{ row['Subject'] }}</span> <small class="text-muted">- {{ row['Body'][:20] }}...</small></td>
-                                                <td><span class="badge">{{ row['Date'] }}</span></td>
-                                            </a>
-                                        </tr>
-                                        {% endif %}
-                                    {% endfor %}
-                                </tbody>
-                            </table>
+                            {% for row in reader %}
+                                {% if row['Filename'] == filename %}
+                                    <h2>{{ row['Subject'] }}</h2>
+                                    <p>{{ row['Date'] }}</p>
+                                    <h3>From: {{ row['Sender'] }}</h3>
+                                    <p>{{ row['Body_Unformatted'] }}</p>
+                                {% endif %}
+                            {% endfor %}
                         </div>
                     </div>
                 </div>
